# kanarini

./: .gitignore  .travis.yml  BUILD.bazel  Gopkg.toml  LICENSE  Makefile  README.md  WORKSPACE  cd.json  response1.json  response2.json
cmd/example/: BUILD.bazel  main.go
cmd/example/app/: BUILD.bazel  app.go  emoji_categories.go  emoji_codemap.go  emotions.go  types.go
cmd/kanarini/: BUILD.bazel  main.go
cmd/kanarini/app/: BUILD.bazel  app.go  client.go  controller.go  leader_election.go  logger.go
demo/: namespaces.yaml
demo/crd/: crd-ingressroute.yaml
demo/custom-metrics-api/: deploy.sh  gencerts.sh  rbac.yaml  service.yaml
demo/grafana/: configmaps.yaml
demo/heptio-contour/: deployment.yaml  rbac.yaml  service.yaml
demo/kanarini-demo/: canarydeployments.yaml  prometheusrules.yaml  servicemonitors.yaml  services.yaml
demo/kanarini-manual/: deployments.yaml
demo/prometheus-operator/: prometheuses.yaml  rbac.yaml
deploy/: canarydeployment.yaml  clusterrolebindings.yaml  crd.yaml  deploy.yaml  deployment.yaml  example.yaml  monitor.yaml  namespace.yaml  namespaces.yaml  quickstart.sh  serviceaccount.yaml
deploy/crd/: crd-canarydeployment.yaml
deploy/custom-metrics-api/: cleanup.sh  configmaps.yaml  deploy.sh  deployment.yaml  gencerts.sh  rbac.yaml  serviceaccount.yaml
deploy/example/: canarydeployments.yaml
deploy/example-manual/: deployments.yaml  ingressroutes.yaml  namespace.yaml  prometheusrules.yaml  servicemonitors.yaml  services.yaml
deploy/grafana/: configmaps.yaml  deployment.yaml  service.yaml  serviceaccount.yaml
deploy/heptio-contour/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
deploy/kanarini/: crd-canarydeployment.yaml  deployment.yaml  rbac.yaml
deploy/kanarini-demo/: canarydeployments.yaml  deployments.yaml  ingressroutes.yaml  prometheusrules.yaml  servicemonitors.yaml  services.yaml
deploy/kanarini-example/: deployments.yaml  ingressroutes.yaml  prometheusrules.yaml  servicemonitors.yaml  services.yaml
deploy/kanarini-manual/: services.yaml
deploy/monitoring/: deployments.yaml  serviceaccounts.yaml  servicemonitors.yaml
deploy/old/: clusterroles.yaml
deploy/old/example/: deployments.yaml  namespace.yaml  services.yaml
deploy/old/monitoring/: prometheuses.yaml  prometheusrules.yaml  services.yaml
deploy/prometheus-operator/: deployment.yaml  prometheuses.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
deploy/scripts/: minikube.sh
pkg/apis/kanarini/: BUILD.bazel  register.go
pkg/apis/kanarini/v1alpha1/: BUILD.bazel  doc.go  register.go  types.go  zz_generated.deepcopy.go
pkg/client/clientset_generated/clientset/: BUILD.bazel  clientset.go
pkg/client/clientset_generated/clientset/fake/: BUILD.bazel  clientset_generated.go  register.go
pkg/client/clientset_generated/clientset/scheme/: BUILD.bazel  register.go
pkg/client/clientset_generated/clientset/typed/kanarini/v1alpha1/: BUILD.bazel  canarydeployment.go  doc.go  generated_expansion.go  kanarini_client.go
pkg/client/clientset_generated/clientset/typed/kanarini/v1alpha1/fake/: BUILD.bazel  fake_canarydeployment.go  fake_kanarini_client.go
pkg/client/informers_generated/externalversions/: BUILD.bazel  factory.go  generic.go
pkg/client/informers_generated/externalversions/internalinterfaces/: BUILD.bazel  factory_interfaces.go
pkg/client/informers_generated/externalversions/kanarini/: BUILD.bazel  interface.go
pkg/client/informers_generated/externalversions/kanarini/v1alpha1/: BUILD.bazel  canarydeployment.go  interface.go
pkg/client/listers_generated/kanarini/v1alpha1/: BUILD.bazel  canarydeployment.go  expansion_generated.go
pkg/controller/: BUILD.bazel  canary.go  canary_util.go  controller.go  deployment_util.go  sync.go
pkg/kubernetes/pkg/controller/: BUILD.bazel  controller_utils.go
pkg/kubernetes/pkg/util/hash/: BUILD.bazel
pkg/kubernetes/pkg/util/labels/: BUILD.bazel  labels.go
pkg/kubernetes/pkg/util/metrics/: BUILD.bazel  util.go
pkg/metrics/: BUILD.bazel  interfaces.go  rest_metrics_client.go  rest_metrics_client_test.go
pkg/util/app/: BUILD.bazel  app_util.go  aux_server.go
pkg/util/logz/: BUILD.bazel  crash.go  logz.go
pkg/util/metric/: BUILD.bazel  metric_util.go
pkg/util/middleware/: BUILD.bazel  middleware.go
