load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nilebox/kanarini/cmd/kanarini",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/kanarini/app:go_default_library",
        "//pkg/util/app:go_default_library",
    ],
)

go_binary(
    name = "kanarini",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
