load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nilebox/kanarini/cmd/kanarini",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/kanarini/app:go_default_library",
        "//pkg/util/app:go_default_library",
    ],
)

go_binary(
    name = "kanarini",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "container",
    binary = ":kanarini",
    tags = ["exclude_from_tests"],
)

container_push(
    name = "push_docker",
    format = "Docker",
    image = ":container",
    registry = "index.docker.io",
    repository = "nilebox/kanarini",
    stamp = True,
    tag = "{STABLE_BUILD_GIT_TAG}-{STABLE_BUILD_GIT_COMMIT}",
)
