load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["controller.go"],
    importpath = "github.com/nilebox/kanarini/pkg/controller",
    visibility = ["//visibility:public"],
    deps = ["//vendor/k8s.io/client-go/kubernetes:go_default_library"],
)
