load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canary.go",
        "canary_util.go",
        "controller.go",
        "deployment_util.go",
        "sync.go",
    ],
    importpath = "github.com/nilebox/kanarini/pkg/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kanarini/v1alpha1:go_default_library",
        "//pkg/client/clientset_generated/clientset/typed/kanarini/v1alpha1:go_default_library",
        "//pkg/client/informers_generated/externalversions/kanarini/v1alpha1:go_default_library",
        "//pkg/client/listers_generated/kanarini/v1alpha1:go_default_library",
        "//pkg/kubernetes/pkg/controller:go_default_library",
        "//pkg/kubernetes/pkg/util/metrics:go_default_library",
        "//pkg/metrics:go_default_library",
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/wait:go_default_library",
        "//vendor/k8s.io/client-go/informers/apps/v1:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/typed/core/v1:go_default_library",
        "//vendor/k8s.io/client-go/listers/apps/v1:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/tools/record:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)
