load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "interfaces.go",
        "rest_metrics_client.go",
        "utilization.go",
    ],
    importpath = "github.com/nilebox/kanarini/pkg/metrics",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/golang/glog:go_default_library",
        "//vendor/k8s.io/api/autoscaling/v2beta2:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/metrics/pkg/apis/custom_metrics/v1beta2:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/clientset/versioned/typed/metrics/v1beta1:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/custom_metrics:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/external_metrics:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "rest_metrics_client_test.go",
        "utilization_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/k8s.io/api/autoscaling/v2beta2:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/meta/testrestmapper:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/client-go/kubernetes/scheme:go_default_library",
        "//vendor/k8s.io/client-go/testing:go_default_library",
        "//vendor/k8s.io/metrics/pkg/apis/custom_metrics/v1beta2:go_default_library",
        "//vendor/k8s.io/metrics/pkg/apis/external_metrics/v1beta1:go_default_library",
        "//vendor/k8s.io/metrics/pkg/apis/metrics/v1beta1:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/clientset/versioned/fake:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/custom_metrics/fake:go_default_library",
        "//vendor/k8s.io/metrics/pkg/client/external_metrics/fake:go_default_library",
    ],
)
