load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "emoji_codemap.go",
    ],
    importpath = "github.com/nilebox/kanarini/cmd/example/app",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/app:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//pkg/util/metric:go_default_library",
        "//pkg/util/middleware:go_default_library",
        "//vendor/github.com/go-chi/chi:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
    ],
)
