load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canarydeployment.go",
        "interface.go",
    ],
    importpath = "github.com/nilebox/kanarini/pkg/client/informers_generated/externalversions/kanarini/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kanarini/v1alpha1:go_default_library",
        "//pkg/client/clientset_generated/clientset:go_default_library",
        "//pkg/client/informers_generated/externalversions/internalinterfaces:go_default_library",
        "//pkg/client/listers_generated/kanarini/v1alpha1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
