load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "canarydeployment.go",
        "doc.go",
        "generated_expansion.go",
        "kanarini_client.go",
    ],
    importpath = "github.com/nilebox/kanarini/pkg/client/clientset_generated/clientset/typed/kanarini/v1alpha1",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/kanarini/v1alpha1:go_default_library",
        "//pkg/client/clientset_generated/clientset/scheme:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/serializer:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)
